Initialization of the project

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     font-size: 10px;
     /* background: url('./background.jpg') bottom center; */
     /* background: url('./records.png') bottom center; */
-    background: url('./mic.png') bottom center;
+    background: url('./piano.jpg') bottom center;
     background-size: cover;
   }
   
